# portal

backend/: .gitignore  Dockerfile  Makefile  README_MAKE.md  constraints.txt  dockerinstance.py  instance.yaml  mx.ini  requirements.txt  setup.cfg
backend/src/: setup.cfg
backend/src/itonboard/portal/: configure.zcml  setuphandlers.py
backend/src/itonboard/portal/profiles/default/: metadata.xml  registry.xml  types.xml
backend/src/itonboard/portal/profiles/default/types/: chapter.xml  guideline.xml
docs/artwork/guideline_html/: demo.html  stylesheet.css
frontend/: Dockerfile  Makefile  jsconfig.json  mrs.developer.json  package.json
