[metadata]
version = 1.0.0.dev0
name = itonboard.portal
description = ITOnboard Portal
long_description = ""
author = Jens Klein et al
maintainer = Klein & Partner KG
maintainer_email = office@kleinundpartner.at
url = https://github.com/itonboard/portal
license = GPLv2
classifiers =
     Environment :: Web Environment
     Framework :: Plone
     Framework :: Plone :: Addon
     Framework :: Plone :: 6
     Programming Language :: Python
     Programming Language :: Python :: 3.9
     Operating System :: OS Independent
     License :: OSI Approved :: GNU General Public License v2 (GPLv2)
     Do :: not :: publish

[options]
include_package_data = True
install_requires =
    setuptools
    # WSGI
    Zope[wsgi]
    waitress_fastlisten
    # Plone
    Plone
    # Addons
    eea.banner

package_dir =
    = src
packages = itonboard.portal
zip_safe = False

[options.extras_require]
production =
    collective.sentry
    relstorage

test =
    plone.app.testing
    plone.app.contenttypes[test]
    plone.app.robotframework
    pdbpp

[options.packages.find]
where =
    src

[mypy]
ignore_missing_imports = True

[zest.releaser]
create-wheel = yes


[check-manifest]
ignore =
  *.cfg
  *.json
  *.js
  *.yml
  .coveragerc
  .editorconfig
  .gitattributes

[flake8]
exclude = docs,*.egg.
max-complexity = 15

[isort]
# black compatible Plone isort rules:
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
